--- a/template/inc/_topbar.html
+++ b/template/inc/_topbar.html
@@ -15,8 +15,8 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="/view_dbc/">Просмотр</a></li>
               <li><a class="dropdown-item" href="/edit_counter/">Редактирование</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="/add_counter/">Добавление</a></li>
+              <!-- <li><hr class="dropdown-divider"></li> -->
+              <!-- <li><a class="dropdown-item" href="/add_counter/">Добавление</a></li> -->
             </ul>
           </li>
 
