--- a/template/add_counter.html
+++ b/template/add_counter.html
@@ -50,8 +50,13 @@
                                                 d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
                                         </svg>
                                     </a> -->
+                                    {% if {{ form.mode_edit }} == "add" %}
                                     <button type="submit" class="btn btn-sm btn-outline-secondary" value="Добавить в БД"
                                         name="_addCounter">+</button>
+                                    {% elif {{ form.mode_edit }} == "update" %}
+                                    <button type="submit" class="btn btn-sm btn-outline-secondary"
+                                        value="отредактированть БД" name="_buttonSaveCounter">Запись<br /> в БД</button>
+                                    {% endif %}
                                 </td>
                                 <td>
                                     {{ form.name_counter_full }}
