--- a/template/view_dbg.html
+++ b/template/view_dbg.html
@@ -2,7 +2,7 @@
 
 
 {% block title %}
-Просмотр базы счетчиков :: {{ block.super }}
+Просмотр базы групп :: {{ block.super }}
 
 {% endblock %}
 
@@ -19,9 +19,8 @@
         <!-- Table -->
         <table class="table table-bordered border-primary table-striped table-hover">
             <thead class="table-dark">
-                <td></td>
-                <td>Наименование счетчика</td>
-                <td>Схема</td>
+                <td>Наименование группы</td>
+                <!-- <td>Схема</td>
                 <td>Группа</td>
                 <td>Сетевой адрес</td>
                 <td>Зав.номер</td>
@@ -33,18 +32,14 @@
                 <td>Ku</td>
                 <td>Ki</td>
                 <td>Постоянная счетчика</td>
-                <td>Время счетчика</td>
+                <td>Время счетчика</td> -->
             </thead>
-            {% for item in dbc %}
+            {% for item in dbg %}
             <tr>
                 <!-- <td rowspan="2" style="background-color:green;">1</td> -->
-                <td>{{ item.pk }}</td>
-                <td>{{ item.name_counter_full }}</td>
-                <td>{{ item.schem }}</td>
-                <!-- <td>{{ item.group }} </td> -->
-                <td>  {% for group in item.group.all %}
-                        {{group.name_group_full}} 
-                    {% endfor %}</td>
+                <td>{{ item.name_group_full }}</td>
+                <!-- <td>{{ item.schem }}</td>
+                <td>{{ item.group.name_group_full }} </td>
                 <td>{{ item.net_adress }}</td>
                 <td>{{ item.manuf_number }}</td>
                 <td>{{ item.manuf_data }}</td>
@@ -55,7 +50,7 @@
                 <td>{{ item.ku }}</td>
                 <td>{{ item.ki }}</td>
                 <td>{{ item.koefA }}</td>
-                <td>{{ item.datetime }}</td>
+                <td>{{ item.datetime }}</td> -->
 
 
             </tr>
