--- a/template/view_dbc.html
+++ b/template/view_dbc.html
@@ -47,7 +47,7 @@
                     {% endfor %}</td>
                 <td>{{ item.net_adress }}</td>
                 <td>{{ item.manuf_number }}</td>
-                <td>{{ item.manuf_data }}</td>
+                <td>{{ item.manuf_data|date:"d/m/Y" }}</td>
                 <td>{{ item.klass_react }}</td>
                 <td>{{ item.klass_act }}</td>
                 <td>{{ item.nom_u }}</td>
@@ -55,7 +55,7 @@
                 <td>{{ item.ku }}</td>
                 <td>{{ item.ki }}</td>
                 <td>{{ item.koefA }}</td>
-                <td>{{ item.datetime }}</td>
+                <td>{{ item.datetime|date:"d/m/Y G:i:s" }}</td>
 
 
             </tr>
