--- a/template/view_dbc.html
+++ b/template/view_dbc.html
@@ -42,8 +42,8 @@
                 <td>{{ item.name_counter_full }}</td>
                 <td>{{ item.schem }}</td>
                 <!-- <td>{{ item.group }} </td> -->
-                <td>  {% for group in item.group.all %}
-                        {{group.name_group_full}} 
+                <td>  {% for group in item.groupes.all %}
+                        - {{group.name_group_full}} 
                     {% endfor %}</td>
                 <td>{{ item.net_adress }}</td>
                 <td>{{ item.manuf_number }}</td>
